Fix the visibility of the name and company of the testimonials

--- a/frontend/src/styles/sass/_basics.scss
+++ b/frontend/src/styles/sass/_basics.scss
@@ -240,5 +240,5 @@ textarea {
   flex-wrap: wrap;
   clear: both;
   width: 100%;
-  padding: 5rem 1rem 8rem;
+  padding: 5rem 1rem;
 }
